# rfm

./: .gitignore  README.md  data_cleaning_initial.ipynb  main.py  pyproject.toml
data/: rfm_scores.csv
notebooks/: data_cleaning.ipynb
notebooks/.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb  rfm_metrique-checkpoint.ipynb  visualisation-checkpoint.ipynb
